# VibeCodeStudio

./: .gitignore  COMMAND_PALETTE_INTEGRATION.md  LICENSE  README.md  fetch_icons.mjs  final-15-errors.txt  final-18-errors.txt  index.html  package-lock.json  package.json  remaining-errors.txt  tailwind.config.js  ts-errors.txt  ts-final-errors.txt  tsconfig.json  typescript-errors-full.txt  typescript-errors.txt  vite.config.ts
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  filesystem.rs  git.rs  keychain.rs  main.rs  search.rs  terminal.rs
src-tauri/src/models/: ollama.rs
src/3d/: StarField.tsx
src/components/: ThemeProvider.tsx
src/config/: models.ts
src/features/chat/: ChatSidebar.tsx
src/features/explorer/: FileTree.tsx
src/features/onboarding/: CinematicIntro.tsx  WelcomeScreen.tsx
src/features/studio/: ChatPanel.tsx  ChatSidebar.tsx
src/hooks/: useAutoSave.ts  useEditorContext.ts  useKeyboardShortcuts.ts
src/services/: aiCompletion.ts  aiDocs.ts  aiRefactor.ts  aiReview.ts  aiService.ts  aiTests.ts  quickEdit.ts
src/services/lsp/: LSPClient.ts
src/services/providers/: anthropic.ts  gemini.ts  openai.ts  openrouter.ts
src/services/types/: ai.ts
src/stores/: appStore.ts  debugStore.ts  editorStore.ts  gitStore.ts  projectStore.ts  themeStore.ts
src/styles/: completion.css  splitview.css
src/themes/: themes.ts
src/types/: ai.ts
src/utils/: ProjectParser.ts  contextBuilder.ts  errorHandler.ts  performance.ts
(+40 files in other folders)
